force-app/main/default/objects/InvoicedCollection__c/InvoicedCollection__c.object-meta.xml
<CustomObject>
    <label>InvoicedCollection</label>
    <nameField>
        <displayFormat>InvCol-{000}</displayFormat>
        <label>Invoice and collection No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InvoicedCollections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>