force-app/main/default/objects/InvoicedCollection__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>InvoicedCollections</relationshipLabel>
    <relationshipName>InvoicedCollections</relationshipName>
    <type>Lookup</type>
</CustomField>