force-app/main/default/objects/InvoicedCollection__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <referenceTo>Collection__c</referenceTo>
    <relationshipLabel>InvoicedCollections</relationshipLabel>
    <relationshipName>InvoicedCollections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>